--- a/main.html
+++ b/main.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form>
+		<input type="text" id="name" placeholder="Name">
+		<input type="text" id="phone" placeholder="Phone Number">
+		<input type="text" id="address" placeholder="Address">
+		<br>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
+	</br>
+		Please select your preferred breeds
+					<input type="checkbox" id="checkbox" value="Labrador">Labrador
+					<input type="checkbox" id="checkbox" value="Pug">Pug
+					<input type="checkbox" id="cmultiSelect" value="Doberman">Doberman
+		<button type="Submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
