--- a/main.html
+++ b/main.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<form>
-		<input type="text" id="name" placeholder="Name">
-		<input type="text" id="phone" placeholder="Phone Number">
-		<input type="text" id="address" placeholder="Address">
-		<br>
-		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
-	</br>
-		Please select your preferred breeds
-					<input type="checkbox" id="checkbox" value="Labrador">Labrador
-					<input type="checkbox" id="checkbox" value="Pug">Pug
-					<input type="checkbox" id="cmultiSelect" value="Doberman">Doberman
-		<button type="Submit">Submit</button>
-	</form>
-    <script type="text/javascript" src="./script.js">
-</script>
+  <form>
+    <input type="text" id="name" placeholder="Name">
+    <input type="text" id="phone" placeholder="Phone Number">
+    <input type="text" id="address" placeholder="Address">
+    <br>
 
+    <label>
+      <input type="checkbox" id="livedWithDog" value="Have you ever lived with a Dog before?">
+      Have you ever lived with a Dog before?
+    </label>
+    <br>
+
+    <p>Please select your preferred breeds:</p>
+
+    <label>
+      <input type="checkbox" id="labrador" value="Labrador">
+      Labrador
+    </label>
+    <label>
+      <input type="checkbox" id="pug" value="Pug">
+      Pug
+    </label>
+    <label>
+      <input type="checkbox" id="doberman" value="Doberman">
+      Doberman
+    </label>
+    <br>
+
+    <input type="submit" id="submit" value="Submit">
+  </form>
+
+  <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
