--- a/main.html
+++ b/main.html
@@ -3,6 +3,42 @@
 
 <head>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    /* You can move this to styles.css */
+    form {
+      max-width: 400px;
+      margin: auto;
+      padding: 20px;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      background-color: #f9f9f9;
+      font-family: Arial, sans-serif;
+    }
+
+    input, select, label {
+      display: block;
+      width: 100%;
+      margin-bottom: 15px;
+    }
+
+    input[type="checkbox"], label[for="checkbox"] {
+      display: inline-block;
+      width: auto;
+    }
+
+    input[type="submit"] {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 
 <body>
@@ -10,34 +46,21 @@
     <input type="text" id="name" placeholder="Name">
     <input type="text" id="phone" placeholder="Phone Number">
     <input type="text" id="address" placeholder="Address">
-    <br>
 
     <label>
-      <input type="checkbox" id="livedWithDog" value="Have you ever lived with a Dog before?">
+      <input type="checkbox" id="checkbox" value="yes">
       Have you ever lived with a Dog before?
     </label>
-    <br>
 
-    <p>Please select your preferred breeds:</p>
-
-    <label>
-      <input type="checkbox" id="labrador" value="Labrador">
-      Labrador
-    </label>
-    <label>
-      <input type="checkbox" id="pug" value="Pug">
-      Pug
-    </label>
-    <label>
-      <input type="checkbox" id="doberman" value="Doberman">
-      Doberman
-    </label>
-    <br>
+    <label for="multiSelect">Please select your preferred breeds:</label>
+    <select id="multiSelect" multiple>
+      <option value="Labrador">Labrador</option>
+      <option value="Pug">Pug</option>
+      <option value="Doberman">Doberman</option>
+    </select>
 
     <input type="submit" id="submit" value="Submit">
   </form>
-
-  <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
