--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
     <input type="text" id="address" placeholder="Address">
 
     <label>
-      <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before">
+      <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
       Have you ever lived with a Dog before?
     </label>
 
